immersion: fetch scores in contest profile http
