# services/immersion-api/http/rest/openapi/api.gen.go
@@ -72,6 +72,13 @@ type ContestConfigurationOptions struct {
 	Languages              []Language `json:"languages"`
 }
 
+// ContestProfileScores defines model for ContestProfileScores.
+type ContestProfileScores struct {
+	OverallScore float32             `json:"overall_score"`
+	Registration ContestRegistration `json:"registration"`
+	Scores       Scores              `json:"scores"`
+}
+
 // ContestRegistration defines model for ContestRegistration.
 type ContestRegistration struct {
 	Contest         *ContestView        `json:"contest,omitempty"`
@@ -162,6 +169,15 @@ type PaginatedList struct {
 	NextPageToken string `json:"next_page_token"`
 	TotalSize     int    `json:"total_size"`
 }
+
+// Score defines model for Score.
+type Score struct {
+	LanguageCode string  `json:"language_code"`
+	Score        float32 `json:"score"`
+}
+
+// Scores defines model for Scores.
+type Scores = []Score
 
 // Tag defines model for Tag.
 type Tag struct {
@@ -254,6 +270,9 @@ type ServerInterface interface {
 	// Fetches the leaderboard for a contest
 	// (GET /contests/{id}/leaderboard)
 	ContestFetchLeaderboard(ctx echo.Context, id openapi_types.UUID, params ContestFetchLeaderboardParams) error
+	// Fetches the scores of a user profile in a contest
+	// (GET /contests/{id}/profile/{user_id}/scores)
+	ContestProfileFetchScores(ctx echo.Context, id openapi_types.UUID, userId openapi_types.UUID) error
 	// Fetches a contest registration if it exists
 	// (GET /contests/{id}/registration)
 	ContestFindRegistration(ctx echo.Context, id openapi_types.UUID) error
@@ -428,6 +447,30 @@ func (w *ServerInterfaceWrapper) ContestFetchLeaderboard(ctx echo.Context) error
 	return err
 }
 
+// ContestProfileFetchScores converts echo context to params.
+func (w *ServerInterfaceWrapper) ContestProfileFetchScores(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// ------------- Path parameter "user_id" -------------
+	var userId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.ContestProfileFetchScores(ctx, id, userId)
+	return err
+}
+
 // ContestFindRegistration converts echo context to params.
 func (w *ServerInterfaceWrapper) ContestFindRegistration(ctx echo.Context) error {
 	var err error
@@ -530,6 +573,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/contests/ongoing-registrations", wrapper.ContestFindOngoingRegistrations)
 	router.GET(baseURL+"/contests/:id", wrapper.ContestFindByID)
 	router.GET(baseURL+"/contests/:id/leaderboard", wrapper.ContestFetchLeaderboard)
+	router.GET(baseURL+"/contests/:id/profile/:user_id/scores", wrapper.ContestProfileFetchScores)
 	router.GET(baseURL+"/contests/:id/registration", wrapper.ContestFindRegistration)
 	router.POST(baseURL+"/contests/:id/registration", wrapper.ContestRegistrationUpsert)
 	router.POST(baseURL+"/logs", wrapper.LogCreateLog)
